--- a/client/src/screens/Contract/Contract.scss
+++ b/client/src/screens/Contract/Contract.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background:  #141ed2;
+  background:  #ef4444;
 }
 .success-contract{
     width: 100%;
@@ -24,7 +24,7 @@
     align-items: center;
 }
 .contact{
-    background: #141ed2;
+    background: #ef4444;
     width: 90%;
     display: flex;
     justify-content: center;
@@ -69,7 +69,7 @@
    
 }
 .create-contract{
-    background: #141ed2;
+    background: #ef4444;
     width: 50%;
     display: flex;
     justify-content: center;
