--- a/client/src/screens/Home/Home.scss
+++ b/client/src/screens/Home/Home.scss
@@ -80,7 +80,7 @@
   align-self: center !important;
   width: fit-content !important;
   height: 55px !important;
-  background: #141ed2 !important;
+  background: #ef4444 !important;
   box-sizing: border-box !important;
   border-radius: 10px !important;
   font-weight: 500 !important;
