--- a/client/src/screens/Verify/verify.scss
+++ b/client/src/screens/Verify/verify.scss
@@ -99,7 +99,7 @@
 }
 
 .confirm-div{
-    background: #141ed2 !important;
+    background: #ef4444 !important;
     align-items: center !important;
     padding: 10px 20px !important;
     display: flex !important;
