--- a/client/src/screens/User/User.scss
+++ b/client/src/screens/User/User.scss
@@ -1,5 +1,5 @@
 .header {
-  background:  #141ed2;
+  background:  #ef4444;
   display: flex !important;
   padding: 10px;
   justify-content: center !important;
@@ -42,9 +42,9 @@ display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
-  border: 1px solid #141ed2;
+  border: 1px solid #ef4444;
   border-radius: 5px;
-  background: #141ed2;
+  background: #ef4444;
 }
 .tab-text{
   flex: 1;
