--- a/client/src/screens/Vay/Vay.scss
+++ b/client/src/screens/Vay/Vay.scss
@@ -30,7 +30,7 @@
 }
 .vay-body{
     padding: 20px 0px !important;
-    background: linear-gradient(180deg, #141ed2 0%, rgba(0, 132, 69, 0.112) 100%);
+    background: linear-gradient(180deg, #ef4444 0%, rgba(0, 132, 69, 0.112) 100%);
 }
 .title-container{
     padding: 15px 4px 5px 4px !important;
@@ -77,7 +77,7 @@
     box-shadow: 0 8px 6px rgb( 0 0 0/0.2);
     display: flex;
     flex-direction: column;
-    background: #141ed2;
+    background: #ef4444;
     border-radius: 10px;
 }
 .form-title{
@@ -111,7 +111,7 @@
     align-content: center !important;
     text-align: center !important;
     height: 58px !important;
-    background: #141ed2 !important;
+    background: #ef4444 !important;
     border: 1px solid #C4C4C4 !important;
     border-radius: 30px !important;
 }
