--- a/client/src/screens/Wallet/Wallet.scss
+++ b/client/src/screens/Wallet/Wallet.scss
@@ -78,7 +78,7 @@
 }
 
 .check-amount {
-    background: #141ed2;
+    background: #ef4444;
     width: 70%;
     display: flex;
     justify-content: center;
